Update and rename redditseries.mdx to raw-data-sheets.mdx

--- a/src/content/blog/raw-data-sheets.mdx
+++ b/src/content/blog/raw-data-sheets.mdx
@@ -1,5 +1,5 @@
 ---
-title: "The Raw Data Sheets — Gallery"
+title: "The Raw Data Sheets — Quantifying My Life One Day at a Time"
 pubDate: "2025-10-19"
 description: "The foundation of the LifeLoggerz system — a daily Google Sheet where every stat, habit, and moment gets recorded, forming the base of all future analytics."
 tags: ["LifeLoggerz", "Google Sheets", "Raw Data", "Productivity", "Self-Improvement"]
@@ -26,8 +26,7 @@ So in 2023 I began adding structure.
 ## 🗓 Evolution of the Raw Data Sheet (Set 1)
 
 <section class="news-gallery" id="set1" aria-label="Gallery: Evolution 2023–2025">
-  {/* controls */}
-  <input type="radio" name="set1" id="set1-1" defaultChecked hidden />
+  <input type="radio" name="set1" id="set1-1" checked hidden />
   <input type="radio" name="set1" id="set1-2" hidden />
   <input type="radio" name="set1" id="set1-3" hidden />
   <input type="radio" name="set1" id="set1-4" hidden />
@@ -39,8 +38,7 @@ So in 2023 I began adding structure.
         <img src="/images/rawdatapost/2023-raw-data-sheet.png" alt="2023 Raw Data Sheet" loading="lazy" />
         <figcaption><em>2023: where it all started — a few stats, minimal formatting, tiny font.</em></figcaption>
       </figure>
-      <p>I tracked six metrics on one sheet — Sleep, Meals, and a short Summary of the Day.  
-      No color, no formulas — just the first framework.</p>
+      <p>I tracked six metrics on one sheet — Sleep, Meals, and a short Summary of the Day. No color, no formulas — just the first framework.</p>
     </div>
 
     <div class="ng-slide">
@@ -49,8 +47,7 @@ So in 2023 I began adding structure.
         <img src="/images/rawdatapost/2024-raw-data-sheet.png" alt="2024 Raw Data Sheet" loading="lazy" />
         <figcaption><em>Color and structure arrive — each part of life gets its own tab.</em></figcaption>
       </figure>
-      <p>I realized diary logs contained <strong>quantifiable patterns</strong>.  
-      Color-coding and indexing turned the sheet into a true data system.</p>
+      <p>I realized diary logs contained <strong>quantifiable patterns</strong>. Color-coding and indexing turned the sheet into a true data system.</p>
     </div>
 
     <div class="ng-slide">
@@ -59,8 +56,7 @@ So in 2023 I began adding structure.
         <img src="/images/rawdatapost/2024-started-graphing-data.png" alt="2024 Graphing Data" loading="lazy" />
         <figcaption><em>Visual feedback — graphs for habits, work hours, and wellness.</em></figcaption>
       </figure>
-      <p>The first time I saw <strong>my life in charts</strong>.  
-      Productivity, social energy, consistency — all visible at a glance.</p>
+      <p>The first time I saw <strong>my life in charts</strong>. Productivity, social energy, consistency — all visible at a glance.</p>
     </div>
 
     <div class="ng-slide">
@@ -75,8 +71,7 @@ So in 2023 I began adding structure.
   </div>
 
   <div class="ng-dots" role="tablist" aria-label="Select slide">
-    <label htmlFor="set1-1">•</label><label htmlFor="set1-2">•</label>
-    <label htmlFor="set1-3">•</label><label htmlFor="set1-4">•</label>
+    <label htmlFor="set1-1">•</label><label htmlFor="set1-2">•</label><label htmlFor="set1-3">•</label><label htmlFor="set1-4">•</label>
   </div>
 </section>
 
@@ -87,7 +82,7 @@ So in 2023 I began adding structure.
 ## 🧩 The Individual Sheets (Set 2)
 
 <section class="news-gallery" id="set2" aria-label="Gallery: Raw Data Tabs">
-  <input type="radio" name="set2" id="set2-1" defaultChecked hidden />
+  <input type="radio" name="set2" id="set2-1" checked hidden />
   <input type="radio" name="set2" id="set2-2" hidden />
   <input type="radio" name="set2" id="set2-3" hidden />
   <input type="radio" name="set2" id="set2-4" hidden />
@@ -98,21 +93,19 @@ So in 2023 I began adding structure.
   <input type="radio" name="set2" id="set2-9" hidden />
 
   <div class="ng-slides">
-    <div class="ng-slide"><h3>💰 Money</h3><figure><img src="/images/rawdatapost/rawdata-money.png" alt="Money Sheet" loading="lazy"/><figcaption><em>Tracks income and spending patterns.</em></figcaption></figure><p>Financial habits become visible: priorities and discipline.</p></div>
-    <div class="ng-slide"><h3>📜 Logs (Complete)</h3><figure><img src="/images/rawdatapost/rawdata-logs.png" alt="Logs Sheet" loading="lazy"/><figcaption><em>Every event and thought captured verbatim.</em></figcaption></figure><p>Written in Obsidian then pasted for searchable reflection.</p></div>
-    <div class="ng-slide"><h3>⚙️ Logs (Condensed)</h3><figure><img src="/images/rawdatapost/rawdata-logs-condensed.png" alt="Condensed Logs" loading="lazy"/><figcaption><em>Summaries via Apps Script + ChatGPT API.</em></figcaption></figure><p>Morning, afternoon, evening snapshots for quick review.</p></div>
-    <div class="ng-slide"><h3>💬 Quotes</h3><figure><img src="/images/rawdatapost/rawdata-quotes.png" alt="Quotes Sheet" loading="lazy"/><figcaption><em>Memorable lines from people in my life.</em></figcaption></figure><p>End-of-day quotes capture tone and context.</p></div>
-    <div class="ng-slide"><h3>💥 Blunders</h3><figure><img src="/images/rawdatapost/rawdata-blunders.png" alt="Blunders Sheet" loading="lazy"/><figcaption><em>Failures turned into data for growth.</em></figcaption></figure><p>Patterns (“woke late” ×70) eventually trigger change.</p></div>
-    <div class="ng-slide"><h3>👕 Outfits</h3><figure><img src="/images/rawdatapost/rawdata-outfits.png" alt="Outfits Sheet" loading="lazy"/><figcaption><em>Color-coded for style and weather.</em></figcaption></figure><p>Tracks style evolution and seasonal preferences.</p></div>
-    <div class="ng-slide"><h3>🍽 Food</h3><figure><img src="/images/rawdatapost/rawdata-food.png" alt="Food Sheet" loading="lazy"/><figcaption><em>Every meal logged for awareness.</em></figcaption></figure><p>Spot diet patterns without counting calories.</p></div>
-    <div class="ng-slide"><h3>📍 Places</h3><figure><img src="/images/rawdatapost/rawdata-places.png" alt="Places Sheet" loading="lazy"/><figcaption><em>Breadcrumbs of movement and presence.</em></figcaption></figure><p>Shows exploration vs routine.</p></div>
-    <div class="ng-slide"><h3>🧑‍🤝‍🧑 People</h3><figure><img src="/images/rawdatapost/rawdata-peeps.png" alt="People Sheet" loading="lazy"/><figcaption><em>Catalog of daily interactions.</em></figcaption></figure><p>Answers “When did I last see them?” instantly.</p></div>
+    <div class="ng-slide"><h3>💰 Money</h3><figure><img src="/images/rawdatapost/rawdata-money.png" alt="Money Sheet" loading="lazy" /><figcaption><em>Tracks income and spending patterns.</em></figcaption></figure><p>Financial habits become visible: priorities and discipline.</p></div>
+    <div class="ng-slide"><h3>📜 Logs (Complete)</h3><figure><img src="/images/rawdatapost/rawdata-logs.png" alt="Logs Sheet" loading="lazy" /><figcaption><em>Every event and thought captured verbatim.</em></figcaption></figure><p>Written in Obsidian then pasted for searchable reflection.</p></div>
+    <div class="ng-slide"><h3>⚙️ Logs (Condensed)</h3><figure><img src="/images/rawdatapost/rawdata-logs-condensed.png" alt="Condensed Logs" loading="lazy" /><figcaption><em>Summaries via Apps Script + ChatGPT API.</em></figcaption></figure><p>Morning, afternoon, evening snapshots for quick review.</p></div>
+    <div class="ng-slide"><h3>💬 Quotes</h3><figure><img src="/images/rawdatapost/rawdata-quotes.png" alt="Quotes Sheet" loading="lazy" /><figcaption><em>Memorable lines from people in my life.</em></figcaption></figure><p>End-of-day quotes capture tone and context.</p></div>
+    <div class="ng-slide"><h3>💥 Blunders</h3><figure><img src="/images/rawdatapost/rawdata-blunders.png" alt="Blunders Sheet" loading="lazy" /><figcaption><em>Failures turned into data for growth.</em></figcaption></figure><p>Patterns (“woke late” ×70) eventually trigger change.</p></div>
+    <div class="ng-slide"><h3>👕 Outfits</h3><figure><img src="/images/rawdatapost/rawdata-outfits.png" alt="Outfits Sheet" loading="lazy" /><figcaption><em>Color-coded for style and weather.</em></figcaption></figure><p>Tracks style evolution and seasonal preferences.</p></div>
+    <div class="ng-slide"><h3>🍽 Food</h3><figure><img src="/images/rawdatapost/rawdata-food.png" alt="Food Sheet" loading="lazy" /><figcaption><em>Every meal logged for awareness.</em></figcaption></figure><p>Spot diet patterns without counting calories.</p></div>
+    <div class="ng-slide"><h3>📍 Places</h3><figure><img src="/images/rawdatapost/rawdata-places.png" alt="Places Sheet" loading="lazy" /><figcaption><em>Breadcrumbs of movement and presence.</em></figcaption></figure><p>Shows exploration vs routine.</p></div>
+    <div class="ng-slide"><h3>🧑‍🤝‍🧑 People</h3><figure><img src="/images/rawdatapost/rawdata-peeps.png" alt="People Sheet" loading="lazy" /><figcaption><em>Catalog of daily interactions.</em></figcaption></figure><p>Answers “When did I last see them?” instantly.</p></div>
   </div>
 
   <div class="ng-dots" role="tablist" aria-label="Select slide">
-    <label htmlFor="set2-1">•</label><label htmlFor="set2-2">•</label><label htmlFor="set2-3">•</label>
-    <label htmlFor="set2-4">•</label><label htmlFor="set2-5">•</label><label htmlFor="set2-6">•</label>
-    <label htmlFor="set2-7">•</label><label htmlFor="set2-8">•</label><label htmlFor="set2-9">•</label>
+    <label htmlFor="set2-1">•</label><label htmlFor="set2-2">•</label><label htmlFor="set2-3">•</label><label htmlFor="set2-4">•</label><label htmlFor="set2-5">•</label><label htmlFor="set2-6">•</label><label htmlFor="set2-7">•</label><label htmlFor="set2-8">•</label><label htmlFor="set2-9">•</label>
   </div>
 </section>
 
@@ -121,23 +114,22 @@ So in 2023 I began adding structure.
 ## 📊 Advanced Visuals & Dashboards (Set 3)
 
 <section class="news-gallery" id="set3" aria-label="Gallery: Advanced Dashboards">
-  <input type="radio" name="set3" id="set3-1" defaultChecked hidden />
+  <input type="radio" name="set3" id="set3-1" checked hidden />
   <input type="radio" name="set3" id="set3-2" hidden />
   <input type="radio" name="set3" id="set3-3" hidden />
   <input type="radio" name="set3" id="set3-4" hidden />
   <input type="radio" name="set3" id="set3-5" hidden />
 
   <div class="ng-slides">
-    <div class="ng-slide"><h3>🧮 Money Dashboard</h3><figure><img src="/images/rawdatapost/rawdata-money-dashboard.png" alt="Money Dashboard" loading="lazy"/><figcaption><em>Spending and earning at a glance.</em></figcaption></figure><p>Connected to the financial log for instant totals and averages.</p></div>
-    <div class="ng-slide"><h3>🎈 Weekend Sheet</h3><figure><img src="/images/rawdatapost/rawdata-wknd.png" alt="Weekend Sheet" loading="lazy"/><figcaption><em>Weekend-only snapshot for balance check.</em></figcaption></figure><p>Shows how I spend free time — outside or screen-bound.</p></div>
-    <div class="ng-slide"><h3>📉 Graphs I</h3><figure><img src="/images/rawdatapost/rawdata-graphs1.png" alt="Graphs 1" loading="lazy"/><figcaption><em>Visual analytics for habits and work.</em></figcaption></figure><p>Converts raw entries into trends.</p></div>
-    <div class="ng-slide"><h3>📈 Graphs II</h3><figure><img src="/images/rawdatapost/rawdata-graphs2.png" alt="Graphs 2" loading="lazy"/><figcaption><em>Deeper correlations between variables.</em></figcaption></figure><p>Shows links between rest, work, and emotion.</p></div>
-    <div class="ng-slide"><h3>🏆 Trophy Shelf</h3><figure><img src="/images/rawdatapost/rawdata-trophyshelf.png" alt="Trophy Shelf" loading="lazy"/><figcaption><em>Gamified progress tracking in Sheets.</em></figcaption></figure><p>Cells turn green when goals are met — a reward loop in spreadsheet form.</p></div>
+    <div class="ng-slide"><h3>🧮 Money Dashboard</h3><figure><img src="/images/rawdatapost/rawdata-money-dashboard.png" alt="Money Dashboard" loading="lazy" /><figcaption><em>Spending and earning at a glance.</em></figcaption></figure><p>Connected to the financial log for instant totals and averages.</p></div>
+    <div class="ng-slide"><h3>🎈 Weekend Sheet</h3><figure><img src="/images/rawdatapost/rawdata-wknd.png" alt="Weekend Sheet" loading="lazy" /><figcaption><em>Weekend-only snapshot for balance check.</em></figcaption></figure><p>Shows how I spend free time — outside or screen-bound.</p></div>
+    <div class="ng-slide"><h3>📉 Graphs I</h3><figure><img src="/images/rawdatapost/rawdata-graphs1.png" alt="Graphs 1" loading="lazy" /><figcaption><em>Visual analytics for habits and work.</em></figcaption></figure><p>Converts raw entries into trends.</p></div>
+    <div class="ng-slide"><h3>📈 Graphs II</h3><figure><img src="/images/rawdatapost/rawdata-graphs2.png" alt="Graphs 2" loading="lazy" /><figcaption><em>Deeper correlations between variables.</em></figcaption></figure><p>Shows links between rest, work, and emotion.</p></div>
+    <div class="ng-slide"><h3>🏆 Trophy Shelf</h3><figure><img src="/images/rawdatapost/rawdata-trophyshelf.png" alt="Trophy Shelf" loading="lazy" /><figcaption><em>Gamified progress tracking in Sheets.</em></figcaption></figure><p>Cells turn green when goals are met — a reward loop in spreadsheet form.</p></div>
   </div>
 
   <div class="ng-dots" role="tablist" aria-label="Select slide">
-    <label htmlFor="set3-1">•</label><label htmlFor="set3-2">•</label>
-    <label htmlFor="set3-3">•</label><label htmlFor="set3-4">•</label><label htmlFor="set3-5">•</label>
+    <label htmlFor="set3-1">•</label><label htmlFor="set3-2">•</label><label htmlFor="set3-3">•</label><label htmlFor="set3-4">•</label><label htmlFor="set3-5">•</label>
   </div>
 </section>
 
@@ -152,9 +144,7 @@ Each post in this series shows how automation and design turn life into an evolv
 > — *LifeLoggerz*
 
 <div className="post-nav">
-  <a className="btn-next" href="/blog/daily-snapshot" aria-label="Next Post: Daily Summary">
-    Next Post → Daily Summary
-  </a>
+  <a className="btn-next" href="/blog/daily-snapshot" aria-label="Next Post: Daily Summary">Next Post → Daily Summary</a>
 </div>
 
 <style>
@@ -167,7 +157,7 @@ Each post in this series shows how automation and design turn life into an evolv
 .news-gallery .ng-slide p{line-height:1.65;}
 .news-gallery .ng-dots{display:flex;justify-content:center;gap:.5rem;margin-top:.5rem;user-select:none;}
 .news-gallery .ng-dots label{cursor:pointer;font-size:1.6rem;line-height:1;opacity:.45;}
-/* visibility rules */
+/* Set 1 visibility */
 #set1-1:checked ~ .ng-slides .ng-slide:nth-of-type(1),
 #set1-2:checked ~ .ng-slides .ng-slide:nth-of-type(2),
 #set1-3:checked ~ .ng-slides .ng-slide:nth-of-type(3),
@@ -176,6 +166,7 @@ Each post in this series shows how automation and design turn life into an evolv
 #set1-2:checked ~ .ng-dots label:nth-of-type(2),
 #set1-3:checked ~ .ng-dots label:nth-of-type(3),
 #set1-4:checked ~ .ng-dots label:nth-of-type(4){opacity:1;}
+/* Set 2 visibility */
 #set2-1:checked ~ .ng-slides .ng-slide:nth-of-type(1),
 #set2-2:checked ~ .ng-slides .ng-slide:nth-of-type(2),
 #set2-3:checked ~ .ng-slides .ng-slide:nth-of-type(3),
@@ -194,6 +185,7 @@ Each post in this series shows how automation and design turn life into an evolv
 #set2-7:checked ~ .ng-dots label:nth-of-type(7),
 #set2-8:checked ~ .ng-dots label:nth-of-type(8),
 #set2-9:checked ~ .ng-dots label:nth-of-type(9){opacity:1;}
+/* Set 3 visibility */
 #set3-1:checked ~ .ng-slides .ng-slide:nth-of-type(1),
 #set3-2:checked ~ .ng-slides .ng-slide:nth-of-type(2),
 #set3-3:checked ~ .ng-slides .ng-slide:nth-of-type(3),
