--- a/src/content/blog/research-paper-fill-in-template.mdx
+++ b/src/content/blog/research-paper-fill-in-template.mdx
@@ -8,6 +8,30 @@ heroImage: "/templates/covers/research-template-cover.png"
 heroImageStyle: "max-height: 600px; width: auto; display: block; margin: 0 auto; object-fit: contain;"
 wide: true
 ---
+---
+
+## 🧩 Template Explained
+
+This labeled version shows what each section of the template is for —  
+from metadata and methods to results and reflections.
+
+<img
+  src="/templates/research-paper-fill-in-template-explained.png"
+  alt="Research Paper Fill-In Template with Labels — Front and Back"
+  loading="lazy"
+  style="
+    display: block;
+    width: 100%;
+    max-width: 1050px;
+    height: auto;
+    margin: 2rem auto;
+    border-radius: 12px;
+    box-shadow: 0 4px 16px rgba(0,0,0,0.08);
+    background: #fff;
+  "
+/>
+
+---
 
 ---
 ## 🖋 Example Pages
