--- a/src/content/blog/dictionary.mdx
+++ b/src/content/blog/dictionary.mdx
@@ -3,10 +3,8 @@ title: "Reading the Dictionary: A 3-Year Journey Through Every Word"
 pubDate: "2025-11-11"
 description: "Since December 22, 2022, I’ve been reading the Merriam-Webster 10th Collegiate Edition—one page a day. As of today, I’m on page 1236, almost done. It’s one of several small-daily habits that taught me how five minutes a day can move mountains."
 tags: ["Habits", "Discipline", "Dictionary Project", "Persistence", "LifeLoggerz"]
-image: "../../images/dictionary.jpg"
+image: "/images/dictionary.jpg"
 ---
-
-![dictionary project](../../images/dictionary.jpg)
 
 On **December 22, 2022**, I started reading the *Merriam-Webster 10th Collegiate Dictionary* — from start to finish.  
 No skipping, no shortcuts. One page a day, every day.  
@@ -20,7 +18,7 @@ As of **November 11, 2025**, I’m on **page 1236**, nearing the end. That’s a
 ### 🕰 Why Read the Dictionary?
 
 When I started, it wasn’t about memorization. It was about exposure — to the raw material of thought.  
-Reading the dictionary slowly reshapes your brain: you start seeing the hidden roots between words, the shared ancestry of meanings, the quiet logic behind English itself.
+Reading the dictionary slowly reshapes your brain: you start seeing the hidden roots between words, the shared ancestry of meanings, the quiet logic behind English itself. Also, it's amazing how I'll see a word in the morning and when I'm listening to an audiobook on my drive to work, I hear that word for the first time ever, just now aware of its existence.
 
 Some people read novels; I read the map that all novels are built from.
 
