--- a/src/content/blog/dictionary.mdx
+++ b/src/content/blog/dictionary.mdx
@@ -1,65 +1,59 @@
 ---
-title: "Reading the Dictionary: A 3-Year Journey Through Every Word"
+title: "Reading the Dictionary — One Page a Day Since 12/22/22"
 pubDate: "2025-11-11"
-description: "Since December 22, 2022, I’ve been reading the Merriam-Webster 10th Collegiate Edition—one page a day. As of today, I’m on page 1236, almost done. It’s one of several small-daily habits that taught me how five minutes a day can move mountains."
-tags: ["Habits", "Discipline", "Dictionary Project", "Persistence", "LifeLoggerz"]
-image: "/images/dictionary.jpg"
+description: "A nearly three-year habit of reading the Merriam-Webster 10th Collegiate from cover to cover taught me that five minutes a day can move mountains."
+tags: ["LifeLoggerz", "Habits", "Discipline", "Dictionary Project", "Persistence"]
+heroImage: "/images/dictionary.jpg"
+draft: false
 ---
 
-On **December 22, 2022**, I started reading the *Merriam-Webster 10th Collegiate Dictionary* — from start to finish.  
-No skipping, no shortcuts. One page a day, every day.  
+# 📚 Reading the Dictionary — One Page a Day Since 12/22/22
 
-Each page takes about five minutes. I read every word, examine the etymologies, and highlight the ones I don’t know or find fascinating. I’ve treated it like a pilgrimage through language — tracing the lineage of words back through Latin, Greek, Old English, and beyond.
+On **December 22, 2022**, I began reading the *Merriam-Webster 10th Collegiate Dictionary* from **A** to **Z**.  
+No skipping, no scanning—**one page a day**, every day. As of **November 11, 2025**, I’m on **page 1236**, nearing the end.
 
-As of **November 11, 2025**, I’m on **page 1236**, nearing the end. That’s almost **three years** of uninterrupted progress — a five-minute ritual that became one of the most meaningful habits of my life.
-
----
-
-### 🕰 Why Read the Dictionary?
-
-When I started, it wasn’t about memorization. It was about exposure — to the raw material of thought.  
-Reading the dictionary slowly reshapes your brain: you start seeing the hidden roots between words, the shared ancestry of meanings, the quiet logic behind English itself. Also, it's amazing how I'll see a word in the morning and when I'm listening to an audiobook on my drive to work, I hear that word for the first time ever, just now aware of its existence.
-
-Some people read novels; I read the map that all novels are built from.
+Each session takes about **five minutes**. I look at every entry, study the **etymologies**, and **highlight** words I don’t know or find especially interesting.
 
 ---
 
-### 📖 The Discipline Behind It
+## 🧭 Why Read a Dictionary?
 
-At first, one page didn’t seem like much. But that’s the point.  
-**Five minutes a day** is nothing—until you repeat it for 1,000 days. Then it becomes everything.
+Not for memorization. For **exposure**.  
+Tracing words back to Latin, Greek, Old English, and beyond changed how I see language. Roots connect families of meaning; prefixes and suffixes become reliable tools; spellings stop being arbitrary and start being historical.
 
-This dictionary project has run alongside two other non-negotiable habits:
-
-- 🎸 *At least 10 minutes of guitar a day* — now over **350+ hours** of practice in two years.  
-- 📜 *One Bible chapter a day* — finished reading the entire Bible this year after three years.
-
-These habits all share the same DNA: **consistency over intensity**.  
-You don’t conquer big goals by willpower bursts; you chip at them daily until they yield.
+> Some people read novels; I’ve been reading the **map** that all novels are built from.
 
 ---
 
-### 🧠 What It’s Taught Me
+## 🔁 The Habit Engine
 
-- **Gains are gradual.** The daily effort compounds invisibly, like interest.  
-- **Momentum is sacred.** Missing one day invites doubt; keeping the streak makes the task effortless.  
-- **Language is alive.** Words are fossils of human experience — clues to how people once thought.  
-- **Discipline transfers.** Once you can commit to five minutes of reading, you can commit to anything.
+This project runs alongside other **non-negotiable** dailies:
 
----
+- 🎸 **Guitar:** at least **10 minutes/day** — **350+ hours** in the past two years  
+- 📜 **Bible:** **1 chapter/day** — finished the whole Bible this year after ~3 years
 
-### ⏳ The Power of the Page
+What they taught me is simple:
 
-The dictionary became a mirror: a record of persistence disguised as paper and ink.  
-Some nights, I’d barely have the energy to read a page — but I did it anyway. And the next morning, I’d remember that *this* is how mountains are climbed.
-
-Not in leaps, but in pages.
+- **Gains are gradual.** Five quiet minutes compound into something loud.  
+- **Momentum is sacred.** The streak removes the decision; you just show up.  
+- **Discipline transfers.** Master one small daily and you can apply it anywhere.
 
 ---
 
-### 🏁 Almost There
+## 🔎 How I Work a Page
 
-Soon, I’ll close the final page. But the point was never to finish — it was to *continue*.  
-The habit of showing up for five minutes a day now underlies everything I do: research, writing, guitar, and even life itself.
+1. Read every headword and definition  
+2. Note pronunciation and part of speech  
+3. Follow the **etymology** trail (the best part)  
+4. **Highlight** unknown or delightful words for later review
 
-Persistence, it turns out, is the real definition worth memorizing.
+It’s a micro-ritual—short enough to do tired, meaningful enough to do proudly.
+
+---
+
+## 🏁 Almost There
+
+Soon I’ll close the back cover. But the real win already happened:  
+this habit re-wired my approach to big goals. **Five minutes a day** can climb mountains—whether paper mountains of words, pages of Scripture, or hours of music practice.
+
+**Persistence**: that’s the definition worth committing to memory.
