--- a/src/content/blog/dictionary.mdx
+++ b/src/content/blog/dictionary.mdx
@@ -4,6 +4,7 @@ pubDate: "2025-11-11"
 description: "A nearly three-year habit of reading the Merriam-Webster 10th Collegiate from cover to cover taught me that five minutes a day can move mountains."
 tags: ["LifeLoggerz", "Habits", "Discipline", "Dictionary Project", "Persistence"]
 heroImage: "/images/dictionary.jpg"
+image: "/images/dictionary.jpg"         
 draft: false
 ---
 
