--- a/src/content/blog/shorthand.mdx
+++ b/src/content/blog/shorthand.mdx
@@ -3,7 +3,7 @@ title: "A Simple Shorthand System — Before You Commit to Something Harder"
 pubDate: "2025-10-27"
 description: "My homemade shorthand system: a set of suffix and abbreviation symbols I built to write faster without learning a whole new script like Gregg or Pitman."
 tags: ["LifeLoggerz", "Writing", "Efficiency", "Productivity", "Notes"]
-heroImage: "/images/shorthand1.png"
+heroImage: "/images/shorthand.png"
 draft: false
 ---
 
