--- a/src/content/blog/research-paper-fill-in-template.mdx
+++ b/src/content/blog/research-paper-fill-in-template.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Research Paper Fill-In Template — How to Use It"
+title: "Research Paper Notes Fill-In Template — How to Use It"
 description: "A step-by-step guide to mastering structured research paper notes using the LifeLoggerz Fill-In Template."
 pubDate: 2025-09-18
 draft: false
@@ -12,8 +12,7 @@ wide: true
 
 ## 🧩 Template Explained
 
-This labeled version shows what each section of the template is for —  
-from metadata and methods to results and reflections.
+This labeled version shows what each section of the template is for:
 
 <img
   src="/images/research-paper-fill-in-template-explained.png"
@@ -83,8 +82,8 @@ from metadata and methods to results and reflections.
 
 ## 🧠 What It Is
 
-The **Research Paper Fill-In Template** is designed for fast, structured paper summaries that make your literature review **searchable, comparable, and visually memorable**.  
-Each box has a purpose — to help you extract *only what matters* from a paper, and to recognize patterns between different studies at a glance.
+The **Research Paper Notes Fill-In Template** is designed for fast, structured paper summaries that make your literature review **searchable, comparable, and visually memorable**.  
+Each box has a purpose and the template helps to isolate information into expected spots. This helps recognize patterns between different studies at a glance.
 
 ---
 
