--- a/src/content/blog/research-paper-fill-in-template.mdx
+++ b/src/content/blog/research-paper-fill-in-template.mdx
@@ -83,19 +83,33 @@ This labeled version shows what each section of the template is for:
 ## 🧠 What It Is
 
 The **Research Paper Notes Fill-In Template** is designed for fast, structured paper summaries that make your literature review **searchable, comparable, and visually memorable**.  
-Each box has a purpose and the template helps to isolate information into expected spots. This helps recognize patterns between different studies at a glance.
+Each box has a purpose and the template helps to isolate information and recognize patterns between different studies at a glance.
 
 ---
 
 ## 🧩 Template Overview
 
-Each page is structured around **information density** and **visual segmentation** — so every field contributes to a quick mental snapshot of the study.
+Every field contributes to a quick mental snapshot of the study.
 
 ### 🏷 Header Section
-- **Date & Session Info:** When and how long you read the paper.  
-- **Paper ID:** Your own indexing number (e.g., `#046`, `2023`).
-- **Title & Authors:** Copy exactly or abbreviate.
-- **Institution / Country / Page Count:** Adds quick bibliographic context.
+
+<div className="grid grid-cols-3 gap-2 my-2">
+  <div><strong>Date Read</strong></div>
+  <div><strong>Session Duration</strong></div>
+  <div><strong>Citations (#)</strong></div>
+
+  <div><strong>Year of Publication</strong></div>
+  <div><strong>Paper Title</strong></div>
+  <div><strong>Paper ID</strong></div>
+
+  <div><strong>Journal</strong></div>
+  <div><strong>Authors</strong></div>
+  <div><strong>Institution</strong></div>
+
+  <div><strong>Country</strong></div>
+  <div><strong>Page Count</strong></div>
+</div>
+
 
 ### 📜 Abstract Box
 A short bullet-point summary of the **core claim** and **key findings**.  
