--- a/src/content/blog/research-paper-fill-in-template.mdx
+++ b/src/content/blog/research-paper-fill-in-template.mdx
@@ -92,23 +92,11 @@ Each box has a purpose and the template helps to isolate information and recogni
 Every field contributes to a quick mental snapshot of the study.
 
 ### 🏷 Header Section
+- **Date Read** • **Session Duration** • **Citations (#)**
+- **Year** • **Paper Title** • **Paper ID**
+- **Journal** • **Authors** • **Institution**
+- **Country** • **Page Count**
 
-<div className="grid grid-cols-3 gap-2 my-2">
-  <div><strong>Date Read</strong></div>
-  <div><strong>Session Duration</strong></div>
-  <div><strong>Citations (#)</strong></div>
-
-  <div><strong>Year of Publication</strong></div>
-  <div><strong>Paper Title</strong></div>
-  <div><strong>Paper ID</strong></div>
-
-  <div><strong>Journal</strong></div>
-  <div><strong>Authors</strong></div>
-  <div><strong>Institution</strong></div>
-
-  <div><strong>Country</strong></div>
-  <div><strong>Page Count</strong></div>
-</div>
 
 
 ### 📜 Abstract Box
