--- a/src/content/blog/research-paper-fill-in-template.mdx
+++ b/src/content/blog/research-paper-fill-in-template.mdx
@@ -97,46 +97,30 @@ Every field contributes to a quick mental snapshot of the study.
 - **Journal** • **Authors** • **Institution**
 - **Country** • **Page Count**
 
-
-
 ### 📜 Abstract Box
-A short bullet-point summary of the **core claim** and **key findings**.  
-Use two colors: black/blue for neutral content, red for limitations or errors.
-
-### ❓Problem / 💡Solution
-Summarize the research gap and its proposed fix in one short line each.  
-Think of these as your *elevator pitch* for the paper.
+A short bullet-point summary of the core claim, problem/solution, key findings, what have you.  
 
 ### ⚙️ Procedures and Testing
 Condense methods (e.g., *“TGA 5–800 °C, XRD 5°/min”*) into shorthand notations.  
 Boxes include:
-- **Materials** and **Mix Designs**
+- **Materials**
 - **Testing Methods / Equipment**
-- **Variables** (independent & dependent)
-- **Key Standards (ASTM / ISO)**
+- **Variables/Testing Conditions** (independent & dependent)
+- **Standards**
 
 ### 📈 Results & Figures
-Sketch or annotate key graphs.  
-Use icons to denote techniques — e.g., 🧪 TGA, ⚡ XRD, 📊 HOH, 🧱 Strength.
+Sketch or annotate key graphs or schematics, doesn't have to look perfect. The point is to recognize these later
 
-### 🧩 Takeaways
-List the *three to five* insights or implications you want to remember.  
-For example:
-- Biochar increases Ca(OH)₂ conversion by 9%.  
-- FA + SEM synergizes → CO₂ uptake ↑.  
-- Retardation at low w/b but early strength recovery.  
+### 🧩 Notes & Questions
+Free canvas for what you found important about the paper.
 
 
 ## 🧭 How to Use It
 
 1. **Print a stack** or open in a tablet note app (GoodNotes / OneNote / iPadOS).  
-2. **Write fast** — don’t polish sentences. Focus on keywords, formulas, and relationships.  
-3. **Highlight key terms**:  
-   - Blue = facts  
-   - Red = problems  
-   - Black = structure  
-4. **File scanned pages** into your *Research Paper Archive* in Drive or your `Research_Log` sheet.  
-5. Link each entry with a matching ID in your Google Sheet database.
+2. **Read paper** and fill it in as you go.  
+3. **File scanned pages** into your *Research Paper Archive* in Drive or your `Research Log` sheet.  
+4. Link each entry with a matching ID in your Google Sheet database. Coming soon.
 
 ---
 
