--- a/src/content/blog/original-to-do-list-template.mdx
+++ b/src/content/blog/original-to-do-list-template.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Weekly To-Do List Template — How to Use It"
-description: "A printable and flexible weekly task planner designed to help you organize your days, balance goals, and stay mindful with quotes and reflections."
+description: "A printable and flexible weekly task planner designed to help you organize your days, balance goals, and stay mindful of your blessings."
 pubDate: 2025-09-18
 draft: false
 tags: ["templates", "organization", "productivity", "planning"]
@@ -35,34 +35,44 @@ Each section gives you just enough space to stay intentional without feeling clu
 
 ## 🧭 Template Overview
 
+Now before we get into the specifics, know that the template is a **customizable .docx file**. 
+
+You see those little icons at the bottom left/center? You can change those out for other things. 
+Those are for your **Hobbies**. Ever find yourself wondering what to do next? Look here.
+
+Also, the images above the 'Projects/Goals'? Those are the **things you're grateful for**.
+
+And then there's the image of **[Phileas Fogg](https://en.wikipedia.org/wiki/Phileas_Fogg)** at the bottom right corner. Change this to whoever inspires you most.
+
+Plenty of room for making the template your own.
+
+Now, onto functionality:
+
 ### 📅 Days of the Week
 Seven daily panels — **Monday through Sunday** — each with lines to record:
-- Top priorities or to-dos  
-- Short notes or reminders  
-- Optional time blocks or events  
+- Top priorities or to-dos (central space)
+- Short notes or reminders (under each date entry)
 
 This format helps visualize the flow of your week and spot overloaded days early.
 
+### 📅 Reminders
+Got something goin' on in a few weeks? A big trip 3 months from now? Tasks that you haven't decided an exact time for? **Keep these reminders to the right of the page**.
+
 ### 🎯 Projects & Goals
-Two dedicated boxes at the bottom of the page:
-- **Projects:** Ongoing work, study, or creative tasks that span multiple days.  
-- **Goals:** Personal or professional objectives you want to focus on this week.
+A dedicated box at the bottom right corner of the page:
+- **Projects:** Ongoing work, study, or creative tasks that won't be done any time soon.  
+- **Goals:** Personal or professional objectives you want to keep in mind. 
 
 Use this space for higher-level direction, not day-to-day errands.
-
-### 💬 Quote Section
-A small open area for your favorite **motivational quote** — perfect for weekly reflection or inspiration.  
-(You can rotate between your own sayings, book lines, or Bible verses.)
 
 ---
 
 ## 🧠 How to Use It
 
 1. **Print a fresh sheet each week** — or duplicate digitally in OneNote, Notability, or Google Docs.  
-2. Start your week by filling in the **Projects/Goals** first.  
-3. Add key tasks and reminders to each day — aim for *3–5 high-impact items* only.  
-4. Use the **Quote** box to anchor your mindset.  
-5. At week’s end, review what got done, what slipped, and carry over remaining items.
+2. Start your week by filling in the **Projects/Goals** first.
+3. Add key tasks and reminders to each day — aim for no more than *3–5 high-impact items*.  
+4. At week’s end, review what got done, what slipped, and carry over remaining items.
 
 ---
 
@@ -82,7 +92,7 @@ A small open area for your favorite **motivational quote** — perfect for weekl
 ## ✍️ Why It Works
 
 - Keeps your focus at the **weekly** level instead of overwhelming daily lists.  
-- Encourages reflection through the **Projects/Goals** and **Quote** sections.  
+- Encourages reflection through the **Projects/Goals** section and the little images.  
 - Lightweight and adaptable — can fit academic, work, or personal planning.  
 - Complements the **LifeLoggerz system** when paired with Google Sheets or your Raw Data log.
 
