--- a/src/content/blog/original-to-do-list-template.mdx
+++ b/src/content/blog/original-to-do-list-template.mdx
@@ -29,7 +29,8 @@ wide: true
 ## 🗓️ What It Is
 
 The **Weekly To-Do List Template** is a simple yet powerful layout designed for tracking tasks across the week while keeping long-term projects and personal goals in sight.  
-Each section gives you just enough space to stay intentional without feeling cluttered.
+Each section gives you just enough space to stay intentional without feeling cluttered. The **tactile sensation** of writing down your tasks and crossing them off is irreplacable.
+This blog shows a lot of tracking with modern tools, but there's no forgetting pen and paper. Complement your Google Sheets data tracking with this!
 
 ---
 
