--- a/src/content/blog/money.mdx
+++ b/src/content/blog/money.mdx
@@ -5,14 +5,8 @@ pubDate: "2025-09-19"
 heroImage: "/images/finances.png"
 ---
 
-# From Dollars to Decisions — How I Track My Entire Financial Life in Google Sheets 💵📊
-
-**Subtitle:** Turning every expense, paycheck, and month-end total into a story of discipline, habits, and progress.
-
----
-
-Hi — I’m **Jose** (23), a civil-engineering PhD student and the creator of **LifeLoggerz**.  
-While LifeLoggerz began as a habit-tracking project, one of the most powerful parts of the system became my **financial tracker** — a Google Sheets setup that shows exactly where my money goes, how much I save, and what my spending says about my decisions.
+While LifeLoggerz began as a habit-tracking project, one of the most powerful parts of the system became my **financial tracker**.
+This Google Sheets setup shows exactly where my money goes, how much I save, and what my spending says about my decisions.
 
 This blog post breaks down the system you see in my screenshots: the yearly savings chart, category breakdowns, month-by-month tables, and the raw data sheet where every expense is tagged and explained.
 
@@ -147,82 +141,9 @@ The top sheet visually displays:
 - and the **Current Month Tile View** of each category
 
 It becomes your financial “homepage.”
-
 ---
 
 ## Roadmap — what’s next for my financial tracker
-
 - Add a year-over-year comparison dashboard  
-- Build an automated “expected rent + bills” forecasting model  
 - Integrate Google Finance API for investment widgets  
-- Add a lightweight version for readers to use as a starter template  
 
----
-
-## ChatGPT prompts I use to automate finances
-
-**Parse descriptions into categories**
-
-```text
-Given this text: "$40 gas, $12 sandwich, $3 soap"
-Output:
-Gas: 40
-Food: 12
-HP: 3
-
-Explain monthly patterns
-
-Analyze spending categories for September. Identify unusual spikes, savings trends, and areas where expenses dropped.
-
-Generate a month-end financial summary
-
-Summarize this month:
-- total income
-- total expenses
-- net
-- biggest category
-- one insight
-- one suggestion
-
-Want early access to the template?
-
-I won’t gatekeep.
-
-I’ll share:
-
-    the full 2025 template
-
-    the raw data sheet
-
-    the dashboard structure
-
-    the Apps Script that logs categories automatically
-
-Just DM me, comment, or join the LifeLoggerz newsletter.
-Questions for you
-
-    Do you track your finances?
-
-    How granular do you get?
-
-    Do you prefer apps (YNAB, Mint) or spreadsheets?
-
-    Should I release the template in multiple difficulty levels?
-
-Social snippets (copy/paste)
-
-X/Twitter:
-“I built a Google Sheets system that tracks every dollar I spend or save — with automated dashboards, categories, and year-over-year insights. Here’s the breakdown. 💵📊 [link]”
-
-Mastodon:
-“My financial tracker is now fully automated: raw data → monthly rollups → dashboards. Template coming soon.”
-
-If you want, I can also create:
-
-    A downloadable starter financial sheet
-
-    A tutorial showing how to build the savings graph
-
-    A template that matches your aesthetic exactly
-
-    A video script walking through the dashboard
