--- a/src/content/blog/LifeLoggerz-Q-and-A.mdx
+++ b/src/content/blog/LifeLoggerz-Q-and-A.mdx
@@ -3,15 +3,14 @@ title: "LifeLoggerz Q&A — Tracking Life, One Cell at a Time"
 pubDate: "2025-10-09"
 description: "Common questions about how I track my life daily using Google Sheets, why I do it, and what I’ve learned from years of logging data."
 tags: ["LifeLoggerz", "Google Sheets", "Data Tracking", "Self-Improvement"]
-updatedDate: "2025-10-09"   # optional
 heroImage: "/images/trophy_shelf.png"
-draft: false                 # optional
+draft: false             
 ---
 
 # 🧠 LifeLoggerz Q&A — Tracking Life, One Cell at a Time
 
 Welcome to **LifeLoggerz**, a blog by a grad student obsessed with data and self-improvement.  
-For the past three years, I’ve been tracking dozens of aspects of my daily life in Google Sheets — everything from sleep and food to diary logs and productivity.  
+I’ve been tracking dozens of aspects of my daily life in Google Sheets for years, everything from sleep and food to diary logs and time spent on hobbies.  
 
 Here are some of the most common questions I get about how (and why) I do it.
 
@@ -19,44 +18,43 @@ Here are some of the most common questions I get about how (and why) I do it.
 
 ## 💬 How do you have so much time?
 
-It’s not that I *have* more time — it’s that I’ve **removed what doesn’t matter**.  
-I don’t drink, party, scroll endlessly, or fill my day with noise. I live at home with my family, which gives me the rare freedom to focus deeply on my goals — finishing my PhD, playing flamenco guitar, and building this blog.
+It’s not that I *have* more time, I've simply **removed what doesn’t matter**. Remember that **everyone has 24 hours in a day**.
+Everyone eats, sleeps, uses the restroom, etc. The key is to optimize the remaining time. Is there something you can improve the efficiency of at work or in your personal life? **Do it**.
 
-Logging my life helps me see where my time actually goes. Once you see clearly, you realize how much of your day you can reclaim.
+**Logging my life** helps me see where my time actually goes. Once you see clearly, you realize how much of your day you can reclaim.
+I've automated processes and cut out/merged tasks to where I have more available time. 
+For instance, I don't watch TV/Netflix/Movies or look at social media/the news. Instead I listen to audiobooks while doing menial tasks (ex: driving) and this leaves me time for creative hobbies.
+Plenty of other tips and tricks for saving time that you'll find on LifeLoggerz!
 
 ---
 
 ## ⏰ How long does life logging take each day?
 
-Only about **3–5 minutes per day**.  
-Most logs are dropdowns or quick notes in my *Raw Data* sheet. My diary logs take a little longer — maybe 10–30 minutes at night when I’m winding down.
+Only about **3–5 minutes per day** for the bare essentials. 
+Most stats are quick notes in my *Raw Data* sheet. My diary logs take a little longer — maybe 10–30 minutes at night when I’m winding down. It's up to you how much you want to track, I find that journaling the day's events gives context to the stats logged for a given day.
 
-The system’s mostly automated with **Google Apps Script**. I built pop-up input forms, daily backups, and highlight functions so logging feels effortless.  
-It’s less of a chore and more of a nightly reflection ritual.
+The system’s mostly automated with **Google Apps Script**. I built pop-up input forms, automatic daily backups, and other functions so logging feels effortless.  
+It’s less of a chore and more of a nightly reflection ritual, something that at this point I can't fathom skipping for even a day.
 
 ---
 
 ## 🧩 What have you learned from tracking your life?
 
-A lot — more than I ever expected.
+A lot. I mean that sincerely, it's helped me grow in many ways:
 
 - **Time awareness** — Life moves fast until you track it. Looking back at any day in 2023 or 2024, I can recall what I did, what I ate, and how I felt.
-- **Sharper memory** — Logging daily strengthens your recall; small details start to stick naturally.
-- **Accountability through data** — The spreadsheet never lies. It shows you your habits in black and white.
-- **AI as an ally** — Integrating ChatGPT with Sheets taught me that automation enhances mindfulness, not laziness.
-- **Simple systems scale best** — My first sheet only tracked *Sleep, Food,* and *Diary*. Today, it tracks 13+ categories — all built on the same clean foundation.
+- **Sharper memory** — Logging daily strengthens your recall; small details start to stick naturally. No longer do I struggle to remember what I had for breakfast, or when I got home.
+- **Accountability through data** — The spreadsheet never lies. It shows you your habits and gives you fuel for improvement.
 
 ---
 
 ## 🕶 Do you track “wasted time”?
 
-I avoid that term.  
-I prefer **Passive Time** — moments where my attention drifts or I recharge.
-
-Watching a film with family isn’t “wasted.”  
-Doomscrolling for 30 minutes probably is.  
-
-I don’t track to judge myself — I track to keep a healthy balance between *intentional* and *passive* time.
+Ironically, no. Otherwise, I'd know how much time was spent on building all of these systems. /s
+In truth, I used to, but I find that I go too far and treat 'closing my eyes to rest after a long work session' as wasted time. 
+You can never be 100% productive. What matters is that you see how much you accomplish even on your toughest days.
+If you want your dashboard to display “4 hours, 57 minutes, and 32 seconds wasted today,” feel free to add it.
+I personally prefer to see what meaningful things occupy my time. Wasted time is something I’m already aware of and I don’t need a reminder for it.
 
 ---
 
@@ -64,11 +62,11 @@ I don’t track to judge myself — I track to keep a healthy balance between *i
 
 Absolutely.  
 
-Each year, I release a new version — the **2026 LifeLoggerz Template** will be free to download soon.  
-It’s simple, clean, and works best in **Google Sheets** (not Excel).  
+The **LifeLoggerz Templates** are **free** to download.  
+It’s simple, clean, and works best in **Google Sheets** (you can migrate it to Excel if you wish).
 
 You can:
-- Delete sheets you don’t need (e.g., *Dreams* → add *Mood* or *Calories* instead)
+- Delete sheets you don’t need (e.g., *Blunders* → add *Mood* or *Calories* instead)
 - Use it without scripts or formulas
 - Add automation later through **Google Apps Script**
 
@@ -81,11 +79,10 @@ You can:
 Pretty much.  
 I can’t imagine *not* logging. It’s become second nature.  
 
-Even if I skip a night, I fill it in the next morning by memory.  
-It’s not about perfection — it’s about reflection.  
+If I skip a night because I'm super busy/tired/sick, I fill it in the next morning by memory. It has to get done, no excuses.  
 
-Every year, I refine the templates, improve the visualizations, and share the scripts for free so others can join in.  
-**LifeLoggerz** isn’t a one-time project — it’s a lifelong experiment in self-awareness.
+Every year, I refine the templates, improve the visuals, and share free resources so others can join in tracking for self-improvement/reflection.
+**LifeLoggerz** isn’t a one-time project. You'll see this site grow in content.
 
 ---
 
@@ -103,19 +100,7 @@ Maybe one day I’ll turn it into an app, but for now, **I want to empower peopl
 
 ## 🚀 What’s next?
 
-2026 is about sharing everything I’ve built — not just the sheets, but the philosophy behind them.
+2026 is about sharing everything I’ve built — not just the sheets, but the philosophy behind them. Stick around!
 
-Upcoming posts:
-- “Building Your 2026 Data Archive”
-- “Using ChatGPT to Summarize Your Diaries”
-- “Designing Graph Dashboards in Sheets”
-- “Performing a Time Audit That Actually Works”
-- “How Life Tracking Improves Memory & Focus”
 
-Outside the blog, I’m working on my PhD in Concrete Materials, learning Flamenco guitar, and building the *LifeLoggerz* ecosystem to help people turn data into direction.
-
----
-
-> “You can’t improve what you don’t measure.  
-> LifeLoggerz is about turning awareness into action — one cell at a time.”
 
